--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                      <p>Your browser doesn't support HTML5 canvas.</p>
             </canvas>
         </div>
+                <iframe src="https://one.livesplit.org/" width="370" height="530"></iframe>
 
         <!-- Run the game code -->
         <script type="text/javascript" src="btcminerhtml5test.js"></script>
