--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
             <canvas id="canvas" width="1024" height="768" >
                      <p>Your browser doesn't support HTML5 canvas.</p>
             </canvas>
+<iframe src="https://one.livesplit.org/" width="370" height="530" align="right"></iframe>
+
         </div>
-                <iframe src="https://one.livesplit.org/" width="370" height="530"></iframe>
 
         <!-- Run the game code -->
         <script type="text/javascript" src="btcminerhtml5test.js"></script>
