--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <!-- Create the canvas element the game draws to -->
             <canvas id="canvas" width="1024" height="768" >
                          <p>Your browser doesn't support HTML5 canvas.</p>
-<iframe src="https://one.livesplit.org/" width="370" height="530" align="center"></iframe>
+<iframe src="https://one.livesplit.org/" width="370" height="530" align="right"></iframe>
             </canvas>
         </div>
 
